Сайт о путешествиях. Итоговая версия

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,877 +1,49 @@
 @import url(../vendor/fonts/fonts.css);
 
-.page {
-  background-color: #2A2C2F;
-  text-rendering: optimizeLegibility;
-  margin: 0 auto;
-  padding: 0;
-  color: #FFF;
-  background-color: #2A2C2F;
-  font-family: "Inter", "Arial ", sans-serif;
-  box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  text-rendering: optimizeLegib
-}
-
-.header {
-  margin: 0 auto;
-  padding: 0;
-  width: clamp(calc(1024px - 48*2px), calc(100% - 48*2px), calc(1280px - 48*2px));
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  box-sizing: border-box;
-  margin-top: 28px;
-}
-
-
-@media screen and (max-width: 1024px) {
-  .header {
-    width: clamp(calc(768px - 24*2px), calc(100% - 24*2px), calc(1024px - 48*2px));
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .header {
-    width: clamp(calc(320px - 16*2px), calc(100% - 16*2px), calc(768px - 24*2px));
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .header {
-    width: calc(320px - 16*2px);
-    margin-top: 16px;
-  }
-}
-
-
-
-.header__logo {
-  margin: 0;
-  padding: 0;
-  max-width: 176px;
-  height: auto;
-}
-
-@media screen and (max-width: 768px) {
-  .header__logo {
-    max-width: 176px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .header__logo {
-    max-width: 142px;
-  }
-}
-
-
-
-
-.header__lang-links {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  align-self: flex-end
-}
-
-.header__lang-item {
-  margin: 0 18px 0 0;
-}
-
-.header__lang-item:last-of-type {
-  margin: 0;
-}
-
-.header__lang-link {
-  margin: 0;
-  padding: 0;
-  font-weight: normal;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 28px;
-  text-align: right;
-  color: #FFFFFF;
-  text-decoration: none;
-  transition: 0.3s ease-in;
-  display: block;
-}
-
-.header__lang-link_active {
-  text-decoration: underline;
-}
-
-
-
-
-
-
-
-.content {
-  margin: 0 auto;
-  padding: 0;
-  max-width: 1280px;
-  min-width: 320px;
-}
-
-@media screen and (max-width: 1024px) {
-  .content {
-    max-width: 1024px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .content {
-    max-width: 768px;
-  }
-}
-
-
-
-.lead {
-  width: clamp(calc(1024px - 48*2px), calc(100% - 148*2px), calc(1280px - 148*2px));
-  margin: 56px auto 0 auto;
-}
-
-@media screen and (max-width: 1024px) {
-  .lead {
-    width: clamp(720px, calc(100% - 48*2px), calc(1024px - 48*2px));
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .lead {
-    width: 100%;
-  }
-}
-
-.lead__title {
-  margin: 0 auto;
-  padding: 0;
-  display: flex;
-  max-width: 720px;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-weight: 900;
-  font-style: normal;
-  font-size: 96px;
-  line-height: 1.04;
-  text-align: center;
-}
-
-@media screen and (max-width: 768px) {
-  .lead__title {
-    font-size: clamp(40px, 12.5vw, 96px);
-  }
-}
-
-
-
-.lead__subtitle {
-  margin: 32px auto 0;
-  padding: 0;
-  max-width: 640px;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 30px;
-  line-height: 120%;
-  text-align: center;
-}
-
-@media screen and (max-width: 768px) {
-  .lead__subtitle {
-    font-size: clamp(16px, 5vw, 30px);
-    line-height: 1.25;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .lead__subtitle {
-    max-width: calc(320px - 16*2px);
-    margin: 16px auto 0;
-    font-size: 16px;
-    line-height: 1.25;
-  }
-}
-
-
-
-.lead__figure {
-  margin: 0;
-  padding: 0;
-}
-
-.lead__caption {
-  margin: 8px 0 0;
-  padding: 0;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-weight: normal;
-  font-size: 10px;
-  line-height: 14px;
-  letter-spacing: 1.5px;
-  text-transform: uppercase;
-  }
-
-/* 768 */
-@media screen and (max-width: 768px) {
-  .lead__caption {
-    margin: 8px 0 0 24px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .lead__caption {
-    margin: 8px 0 0 16px;
-  }
-}
-
-
-
-.lead__image {
-  margin: 64px auto 0;
-  padding: 0;
-  width: 100%;
-  height: auto;
-}
-
-
-@media screen and (max-width: 1024px) {
-  .lead__image {
-    margin: 56px auto 0;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .lead__image {
-    margin: 40px auto 0;
-  }
-}
-
-
-
-
-
-.intro {
-  width: calc(100% - 148*2px);
-  margin: 92px auto 0;
-}
-
-
-@media screen and (max-width: 1024px) {
-  .intro {
-    width: calc(100% - 48*2px);
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .intro {
-  width: calc(100% - 24*2px);
-  margin: 88px auto 0;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .intro {
-    width: calc(100% - 16*2px);
-    margin: 64px auto 0;
-  }
-}
-
-.intro__title {
-  margin: 0;
-  padding: 0;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-weight: 900;
-  font-style: normal;
-  font-size: 54px;
-  line-height: 1.07;
-}
-
-
-@media screen and (max-width: 720px) {
-  .intro__title {
-    font-size: clamp(32px, 7.5vw, 54px);
-    line-height: 1.07;
-  }
-}
-
-
-.intro__text {
-  margin: 40px 0 0 0;
-  padding: 0;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 16px;
-  line-height: 1.63;
-  max-width: 690px;
-}
-
-
-.intro__list {
-  margin: 33px 0 0 0;
-  padding: 0;
-  list-style: none;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-weight: bold;
-  font-style: normal;
-  font-size: 12px;
-  line-height: 18px;
-}
-
-.intro__numbers {
-  margin: 0;
-  padding: 0;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-weight: 400;
-}
-
-
-
-.photo-grid {
-  width: clamp(calc(1024px - 48*2px), calc(100% - 48*2px), calc(1280px - 48*2px));
-  margin: 92px auto 0;
-  padding: 0;
-}
-
-
-@media screen and (max-width: 1024px) {
-  .photo-grid {
-    width: clamp(calc(768px - 24*2px), calc(100% - 48*2px), calc(1024px - 48*2px));
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .photo-grid {
-    width: clamp(calc(320px - 16*2px), calc(100% - 24*2px), calc(768px - 24*2px));
-    margin: 88px auto 0;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .photo-grid {
-    width: calc(320px - 16*2px);
-    margin: 64px auto 0;
-  }
-}
-
-
-
-
-.photo-grid__list {
-  margin: 0;
-  padding: 0;
-  display: grid;
-  list-style-type: none;
-  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-  gap: 16px;
-  width: 100%;
-}
-
-@media screen and (max-width: 1024px) {
-  .photo-grid__list {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 14px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .photo-grid__list {
-    grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
-    gap: 16px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .photo-grid__list {
-    gap: 12px;
-    grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
-  }
-}
-
-.photo-grid__item {
-  margin: 0;
-  padding: 0;
-  min-width: 284px;
-  max-width: 100%;
-}
-
-
-
-
-
-
-.places {
-  width: clamp(calc(1024px - 48*2px), calc(100% - 48*2px), calc(1280px - 148*2px));
-  margin: 92px auto 0;
-  padding: 0;
-}
-
-@media screen and (max-width: 1024px) {
-  .places {
-    width: clamp(calc(768px - 24*2px), calc(100% - 24*2px), calc(1024px - 48*2px));
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .places {
-    width: clamp(320px, calc(100% - 16*2px), calc(768px - 24*2px));
-    margin: 88px auto 0;
-  }
-}
-
-
-@media screen and (max-width: 320px) {
-  .places {
-    width: 100%;
-    margin: 64px auto 0;
-  }
-}
-
-
-
-
-.place {
-  margin: 80px 0 0 0;
-  padding: 0;
-  display: grid;
-  grid-template-columns: minmax(440px, 460px) minmax(456px, 484px);
-  grid-template-rows: auto;
-  column-gap: 40px;
-  row-gap: 48px;
-
-}
-
-@media screen and (max-width: 1024px) {
-  .place {
-    column-gap: 32px;
-    grid-template-columns: minmax(340px, 440px) minmax(352px, 456px);
-    grid-template-rows: auto;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .place {
-    column-gap: 28px;
-    margin: 73px 0 0 0;
-    grid-template-columns: repeat(auto-fill, minmax(340px, max-content));
-    grid-template-rows: auto
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .place {
-    grid-template-columns: 1fr;
-    margin: 0 auto;
-    row-gap: 32px;
-    margin: 50px 0 0 0;
-  }
-}
-
-.place:first-child {
-  margin: 0;
-}
-
-
-
-
-.place__title {
-  margin: 0;
-  padding: 0;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-weight: 900;
-  font-style: normal;
-  font-size: 72px;
-  line-height: 1.05555555556;
-}
-
-
-@media screen and (max-width: 768px) {
-  .place__title {
-    max-width: 340px;
-    font-size: 42px;
-    line-height: 1.09523809524;
-  }
-}
-
-
-@media screen and (max-width: 320px) {
-  .place__title {
-    margin: 0 auto;
-    width: calc(100% - 2*16px);
-    font-size: 32px;
-    line-height: 1.09375;
-  }
-}
-
-
-
-
-
-.place__website {
-  margin: 0;
-  padding: 0;
-  align-self: flex-end;
-}
-
-@media screen and (max-width: 480px) {
-  .place__website {
-    margin: 0 auto;
-    width: calc(100% - 2*16px);
-  }
-}
-
-
-
-
-
-.place__url-heading {
-  margin: 0 0 12px 0;
-  padding: 0;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 12px;
-  letter-spacing: 2px;
-  color: #AAAAAA;
-}
-
-
-
-.place__link {
-  margin: 0;
-  padding: 0;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 122%;
-  color: #fff;
-  transition: 0.3s ease-in;
-}
-
-.place__link:hover {
-  opacity: 0.8;
-}
-
-
-
-
-.place__image {
-  margin: 0;
-  padding: 0;
-  width: clamp(440px, 100%, 460px);
-  height: auto;
-}
-
-@media screen and (max-width: 1024px) {
-  .place__image {
-
-    width: clamp(340px, 100%, 440px);
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .place__image {
-
-    width: clamp(320px, 100%, 100%);
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .place__image {
-    width: 100%;
-    object-fit: cover;
-  }
-}
-
-.place__paragraph {
-  margin: 0 0 26px 0;
-  padding: 0;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 29.34px;
-}
-
-.place__paragraph:last-child {
-  margin-bottom: 0;
-}
-
-@media screen and (max-width: 768px) {
-  .place__paragraph {
-    font-size: 16px;
-    line-height: 26.08px;
-    margin-bottom: 25px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .place__paragraph {
-    max-width: calc(100% - 2*16px);
-    padding-left: 16px;
-  }
-}
-
-
-
-.cover {
-  margin: 0 auto;
-  padding: 0;
-  width: calc(100% - 2*48px);
-  display: flex;
-  flex-direction: column;
-}
-
-
-@media screen and (max-width: 1024px) {
-  .cover {
-    width: 100%;
-  }
-}
-
-
-
-.cover__background {
-  margin: 92px auto 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  color: #fff;
-  text-decoration: none;
-  position: relative;
-  width: 100%;
-  max-width: 1184px;
-  min-height: 740px;
-  background-image: url(../images/cover/cover-trains.jpg);
-  background-size: cover;
-  background-position: center;
-}
-
-.cover__background::before {
-  content: '';
-  display: block;
-  background-color: #2A2C2F;
-  opacity: 0.3;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  transition: 1s ease-in;
-}
-
-.cover__background:hover::before {
-  opacity: 0.8;
-}
-
-
-@media screen and (max-width: 1024px) {
-  .cover__background {
-  min-height: 640px;
-  }
-}
-
-
-@media screen and (max-width: 768px) {
-  .cover__background {
-  min-height: 480px;
-  margin: 90px auto 0;
-  }
-}
-
-
-@media screen and (max-width: 320px) {
-  .cover__background {
-  min-height: 200px;
-  justify-content: flex-start;
-  margin: 66px auto 0;
-  }
-}
-
-
-
-
-.cover__title {
-  margin: 0 auto 32px;
-  padding: 0;
-  max-width: 560px;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 72px;
-  line-height: 106%;
-  text-align: center;
-  display: flex;
-  position: relative;
-  z-index: 1;
-}
-
-@media screen and (max-width: 505px) {
-  .cover__title {
-    font-size: 12vw;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .cover__title {
-    max-width: 288px;
-    font-size: 32px;
-    line-height: 109%;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .cover__title {
-    margin-top: 33px;
-    margin-bottom: 16px;
-  }
-}
-
-
-
-.cover__subtitle {
-  margin: 0 auto;
-  padding: 0;
-  max-width: 360px;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: center;
-  position: relative;
-  z-index: 1;
-}
-
-@media screen and (max-width: 480px) {
-  .cover__subtitle {
-    max-width: 288px;
-    font-size: 14px;
-  }
-}
-
-
-
-.footer {
-  margin: 92px auto 0;
-  padding: 0 0 24px;
-  width: calc(100% - 2*48px);
-  max-width: 1184px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  box-sizing: border-box;
-  flex-wrap: wrap;
-}
-
-@media screen and (max-width: 768px) {
-  .footer {
-    width: calc(100% - 2*24px);
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .footer {
-    width: 100%;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-left: 16px;
-  }
-}
-
-
-
-.footer__links {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  list-style: none;
-  flex-wrap: wrap;
-}
-
-@media screen and (max-width: 480px) {
-  .footer__links {
-    flex-direction: column;
-    margin-bottom: 48px;
-  }
-}
-
-
-.footer__list-item {
-  margin: 0 14px 0 0;
-  padding: 0;
-}
-
-.footer__list-item:last-child {
-  margin-right: 0;
-}
-
-@media screen and (max-width: 480px) {
-  .footer__list-item {
-    margin-right: 0;
-    margin-bottom: 32px;
-  }
-
-  .footer__list-item:last-child {
-    margin-bottom: 0;
-  }
-}
-
-
-
-.footer__link {
-  margin: 0;
-  padding: 0;
-  display: inline-block;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 18px;
-  list-style: none;
-  text-decoration-line: none;
-  color: #FFF;
-  transition: 0.3s ease-in;
-}
-
-.footer__link:hover {
-  opacity: 0.8;
-}
-
-
-@media screen and (max-width: 320px) {
-  .footer__link {
-    font-size: 24px;
-    line-height: 1;
-  }
-}
-
-
-
-.footer__copyright {
-  margin: 0;
-  padding: 0;
-  font-family: "Inter", "Arial ", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: right;
-}
-
-
-@media screen and (max-width: 320px) {
-  .footer__copyright {
-    line-height: 1;
-  }
-}
-
+@import url(../blocks/page/page.css);
+
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__lang-links/header__lang-links.css);
+@import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
+
+@import url(../blocks/content/content.css);
+
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__figure/lead__figure.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
+
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__numbers/intro__numbers.css);
+
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
+@import url(../blocks/photo-grid/__list/photo-grid__list.css);
+
+@import url(../blocks/places/places.css);
+
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__background/cover__background.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+
+  @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__links/footer__links.css);
+@import url(../blocks/footer/__list-item/footer__list-item.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
