--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -12,9 +12,10 @@
 	z-index: 1;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 320px) {
 	.cover__subtitle {
 		max-width: 288px;
 		font-size: 14px;
+    line-height: 16px;
 	}
 }
