--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -6,6 +6,7 @@
 	grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
 	gap: 16px;
 	width: 100%;
+  line-height: 0;
 }
 
 @media screen and (max-width: 1024px) {
@@ -18,13 +19,15 @@
 @media screen and (max-width: 768px) {
 	.photo-grid__list {
 		grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
-		gap: 16px;
+		row-gap: 16px;
+    column-gap: 16px;
 	}
 }
 
 @media screen and (max-width: 480px) {
 	.photo-grid__list {
-		gap: 12px;
+		row-gap: 12px;
+    column-gap: 0px;
 		grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
 	}
 }
