--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -16,3 +16,11 @@
 .header__lang-link:hover {
 	opacity: 0.8;
 }
+
+
+@media screen and (max-width: 320px) {
+	.header__lang-link {
+		font-size: 18px;
+		line-height: 20px;
+	}
+}
