--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -22,6 +22,6 @@
 		max-width: calc(320px - 16*2px);
 		margin: 16px auto 0;
 		font-size: 16px;
-		line-height: 1.25;
+    line-height: 20px;
 	}
 }
