--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -9,5 +9,5 @@
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
-	text-rendering: optimizelegib;
+	text-rendering: optimizeLegibility;
 }
