--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -16,11 +16,12 @@
 	.place__paragraph {
 		font-size: 16px;
 		line-height: 26.08px;
-		margin-bottom: 25px;
+    margin: 0 auto 25px auto;
+    max-width: clamp(320px, calc(100% ), 100%);
 	}
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 320px) {
 	.place__paragraph {
 		max-width: calc(100% - 2*16px);
 		padding-left: 16px;
