--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -4,6 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+  align-items:center;
 	color: #fff;
 	text-decoration: none;
 	position: relative;
@@ -51,7 +52,6 @@
 @media screen and (max-width: 320px) {
 	.cover__background {
 		min-height: 200px;
-		justify-content: flex-start;
 		margin: 66px auto 0;
 	}
 }
