--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -5,8 +5,15 @@
 	font-style: normal;
 	font-weight: normal;
 	font-size: 12px;
-	line-height: 12px;
+	line-height: 20px;
 	letter-spacing: 2px;
 	color: #AAAAAA;
   text-transform: uppercase;
 }
+
+@media screen and (max-width: 768px) {
+	.place__url-heading {
+    line-height: 12px;
+	}
+}
+
